[package]
name = "sbnf"
version = "0.5.1"
license-file = "LICENSE"
repository = "https://github.com/BenjaminSchaaf/sbnf"
description = "A BNF-style language for writing sublime-syntax files"
authors = ["Benjamin Schaaf <ben.schaaf@gmail.com>"]
edition = "2018"
include = [
    "/src/**",
    "/tests/**",
    "/Cargo.toml",
    "/LICENSE",
]

[[test]]
name = "syntax_tests"
harness = false

[workspace]
members = [
    "cli",
    "wasm",
]
default-members = ["cli"]

[dependencies]
indexmap = "1.9.3"
base64 = "0.21.1"
bumpalo = "3.13.0"
symbol_table = "0.3.0"

[dev-dependencies]
maplit = "1.0.2"
matches = "0.1.8"

[profile.release]
opt-level = "z"
lto = true
