[package]
name = "sbnf"
version = "0.6.2"
license-file = "LICENSE"
repository = "https://github.com/BenjaminSchaaf/sbnf"
description = "A BNF-style language for writing sublime-syntax files"
authors = ["Benjamin Schaaf <ben.schaaf@gmail.com>"]
edition = "2018"
include = [
    "/src/**",
    "/tests/**",
    "/Cargo.toml",
    "/LICENSE",
]

[[test]]
name = "syntax_tests"
harness = false

[workspace]
members = [
    "cli",
    "wasm",
]
default-members = ["cli"]

[dependencies]
indexmap = "2.0"
base64 = "0.21.4"
bumpalo = "3.14.0"
hashbrown = "0.14.0"

[dev-dependencies]
matches = "0.1.8"

[profile.release]
opt-level = "z"
lto = true
