[package]
name = "sbnfc"
version = "0.6.3"
license-file = "LICENSE"
repository = "https://github.com/BenjaminSchaaf/sbnf"
description = "CLI program for SBNF: A BNF-style language for writing sublime-syntax files"
authors = ["Benjamin Schaaf <ben.schaaf@gmail.com>"]
edition = "2018"
include = [
    "/src/**",
    "/Cargo.toml",
    "/LICENSE",
]

[[bin]]
name = "sbnf"
path = "src/main.rs"

[dependencies]
sbnf = { version = "0.6.3", path = "../" }

[dependencies.clap]
version = "~2.27.0"
default-features = false
features = [ "wrap_help" ]
