[package]
name = "sbnf_wasm"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sbnf = { path = ".." }
wasm-bindgen = "0.2.87"

# wasm-pack is broken. The profiling profile is supposed to keep debug info, but
# doesn't. See https://github.com/rustwasm/wasm-pack/issues/797
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-Oz', '-g']
